<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_booking_action"
            android:title="@string/tour_booking" />

    </group>

    <item android:title="@string/communicate">
        <menu>

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_callUs"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/call_us" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />


        </menu>

    </item>


</menu>