<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="2dp"
    app:cardElevation="@dimen/four_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:padding="@dimen/four_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/cardview_width"
            android:layout_height="@dimen/card_layout_height"
            android:elevation="10dp"
            app:cardCornerRadius="@dimen/globe_">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_cardview"
                android:layout_marginTop="@dimen/globe_"
                android:contentDescription="@string/content_descrip_tour"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layouth_height_rows"
            android:layout_margin="@dimen/gloal_eigth"
            android:orientation="vertical"
            android:padding="@dimen/global_4_dimenx">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melbourne_ballon_flight_at_sunrise"
                android:textColor="@android:color/widget_edittext_dark"
                android:textSize="@dimen/global_18_demenxion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/doha_madani_shamar_walters_enjpy_the_moments_and_and_fine_moth_watering_deals"
                android:textSize="12sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/from_1_900"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/txt_price" />

                <TextView
                    android:layout_width="87dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="23dp"
                    android:layout_toEndOf="@+id/tv_price"
                    android:background="@drawable/round_btn"
                    android:gravity="center"
                    android:text="@string/view"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>


