<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TourDescriptionActivity">



    <ImageView
        android:id="@+id/discrpt_imgV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/descrTitle"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/deals_activity_margEnd"
                android:layout_marginTop="@dimen/deals_activity_margEnd"
                android:text="@string/great_ocean_road_small_group_ecotour_from_melbourne" />


            <TextView
                android:id="@+id/descripPrice"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="@dimen/price_dim_width"
                android:layout_marginTop="@dimen/price_margintop"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/descOverview"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/deals_activity_margEnd"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cambo"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/overview"
                android:textSize="18sp" />



        </LinearLayout>


    </ScrollView>




    <TextView
        android:id="@+id/textView5"
        style="@android:style/TextAppearance.Material.Title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/book_now"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:onClick="openBooking"
        android:textStyle="bold" />


</LinearLayout>